--- a/styles/businessCard.css
+++ b/styles/businessCard.css
@@ -27,7 +27,7 @@ p {
 }
 
 body {
-    background-color: azure;
+    /* background-color: rgba(232, 238, 238, 0.099); */
     max-width: 1280px;
     height: 100vh;
     margin: 0 auto;
@@ -45,6 +45,7 @@ body {
 
 .card {
     width: 28.75%;
+    height: auto;
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.3);
     border-radius: 10px;
     margin: 20px 0px;
